--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wanderlust-app</title>
+    <title>Wanderlust-app-ok</title>
   </head>
   <body>
     <div id="root"></div>
